# OS

./: Makefile
include/: lib.hpp  utils.h
os_lab1/: CMakeLists.txt
os_lab1/include/: utils.h
os_lab1/src/: child1.cpp  child2.cpp  main.cpp  utils.cpp
os_lab2/: CMakeLists.txt
os_lab2/src/: main.cpp
os_lab3/: CMakeLists.txt  Makefile
os_lab3/include/: utils.h
os_lab3/src/: child1.cpp  child2.cpp  utils.cpp
os_lab5-7/: CMakeLists.txt  Makefile
os_lab5-7/include/: definitions.hpp  functions.hpp
os_lab5-7/src/: client_test.cpp  functions.cpp  server.cpp  server_test.cpp  worker.cpp
src/: child1.cpp  child2.cpp  lib1.cpp  lib2.cpp  main.cpp  main_dynamic.cpp  main_static.cpp  utils.cpp
